# PDF_Sortier_Meister

./: .gitattributes  .gitignore  ENTWICKLUNGSSTAND.md  Machbarkeitsanalyse.md  Projekt PDF Sortier Meister.md  README.md  Vergleich paperless-ngx.md  build.bat  installer.iss  pdf_sortier_meister.spec  pyproject.toml  requirements.txt  run.py  to do.md
.claude/: settings.json
.claude/agents/: issue-resolver.md  llm-feature-builder.md  metadata-sidebar.md  onboarding-builder.md  ux-polisher.md
src/: __init__.py  main.py
src/core/: file_manager.py  pdf_analyzer.py  pdf_cache.py  pdf_metadata.py
src/gui/: detail_panel.py  folder_tree_widget.py  folder_widget.py  main_window.py  pdf_thumbnail.py  rename_dialog.py  settings_dialog.py  setup_wizard.py
src/ml/: classifier.py  claude_provider.py  hybrid_classifier.py  llm_provider.py  ollama_provider.py  openai_provider.py  poe_provider.py
src/utils/: config.py  database.py  logging_config.py
tests/: test_file_manager.py
